--- a/STS-DWT-B-LEFT.ipynb
+++ b/STS-DWT-B-LEFT.ipynb
@@ -2,156 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Right\n",
+    "# Import necessary libraries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# 读取xls文件\n",
-    "data = []\n",
-    "use_data=[9,16,19,21,22,28,31,33,35,39,40,42,51,52,56,59,61,62,67,70,71,76,78,83,88,89,90,95,106,109,113,114]#左0\n",
-    "number1=len(use_data)\n",
-    "pdd=0\n",
-    "for i in range(len(use_data)):\n",
-    "    j=use_data[i]\n",
-    "    data.append(pd.read_excel(f'patient_STS/data/{j}_angel_order.xls'))\n",
-    "\n",
-    "# 计算平均值\n",
-    "mean_data1 = pd.concat(data).groupby(level=0).mean()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 绘制折线图\n",
-    "fig, axs = plt.subplots(2, figsize=(7, 7))\n",
-    "titles = ['Hip', 'Right hip', 'Right knee', 'Left hip', 'Left knee', 'Spine']\n",
-    "for i in range(3,5):\n",
-    "    k=i-3\n",
-    "    for j in range(len(use_data)):\n",
-    "        axs[k].plot(data[j].iloc[:,i+1], alpha=0.1)\n",
-    "    axs[k].plot(mean_data1.iloc[:,i+1], color='red')#label='平均值',\n",
-    "    axs[k].set_title(titles[i])\n",
-    "    axs[k].legend(loc='lower right')\n",
-    "\n",
-    "axs[0].set_ylim([50, 190])\n",
-    "axs[0].set_yticks([100,140,180])\n",
-    "axs[1].set_ylim([50, 190])\n",
-    "axs[1].set_yticks([110,150])\n",
-    "\n",
-    "\n",
-    "for i in range(2):\n",
-    "    axs[i].set_xlabel('Length(Index)')\n",
-    "    axs[i].set_ylabel('Angle(Unit: Degree)')\n",
-    "# 调整子图之间的间距\n",
-    "plt.subplots_adjust(hspace=0.4)\n",
-    "\n",
-    "# 添加总标题\n",
-    "fig.suptitle('STS Left B0', y=0.04, fontsize=20)\n",
-    "\n",
-    "# 设置分辨率\n",
-    "plt.savefig('STS L B0.png', dpi=1500)\n",
-    "# 显示图像\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Right\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# 读取xls文件\n",
-    "data = []\n",
-    "use_data=[3,7,10,12,13,14,15,17,20,23,24,25,29,32,34,37,41,43,45,46,47,49,54,55,66,68,69,72,74,75,77,79,80,81,82,84,86,92,93,97,98,99,100,102,107,108]#左1\n",
-    "number2=len(use_data)\n",
-    "for i in range(len(use_data)):\n",
-    "    j=use_data[i]\n",
-    "    data.append(pd.read_excel(f'patient_STS/data/{j}_angel_order.xls'))\n",
-    "\n",
-    "# 计算平均值\n",
-    "mean_data2 = pd.concat(data).groupby(level=0).mean()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 绘制折线图\n",
-    "fig, axs = plt.subplots(2, figsize=(7, 7))\n",
-    "titles = ['Hip', 'Right hip', 'Right knee', 'Left hip', 'Left knee', 'Spine']\n",
-    "for i in range(3,5):\n",
-    "    k=i-3\n",
-    "    for j in range(len(use_data)):\n",
-    "        axs[k].plot(data[j].iloc[:,i+1], alpha=0.1)\n",
-    "    axs[k].plot(mean_data2.iloc[:,i+1], color='red')\n",
-    "    axs[k].set_title(titles[i])\n",
-    "    axs[k].legend(loc='lower right')\n",
-    "\n",
-    "axs[0].set_ylim([50, 190])\n",
-    "axs[0].set_yticks([100,140,180])\n",
-    "axs[1].set_ylim([50, 190])\n",
-    "axs[1].set_yticks([110,150])\n",
-    "\n",
-    "\n",
-    "for i in range(2):\n",
-    "    axs[i].set_xlabel('Length(Index)')\n",
-    "    axs[i].set_ylabel('Angle(Unit: Degree)')\n",
-    "# 调整子图之间的间距\n",
-    "plt.subplots_adjust(hspace=0.4)\n",
-    "\n",
-    "# 添加总标题\n",
-    "fig.suptitle('STS Left B1', y=0.04, fontsize=20)\n",
-    "\n",
-    "# 设置分辨率\n",
-    "plt.savefig('STS L B1.png', dpi=1500)\n",
-    "# 显示图像\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pywt\n",
     "import numpy as np\n",
     "\n",
-    "i=3\n",
-    "cA1,cD1 = pywt.dwt(mean_data1.iloc[:,i+1],'db1')\n",
-    "cA2,cD2 = pywt.dwt(mean_data2.iloc[:,i+1],'db1')\n",
-    "diffa1 = np.sum(np.abs(cA1))\n",
-    "diffa2 = np.sum(np.abs(cA2))\n",
-    "diffd1 = np.sum(np.abs(cD1))\n",
-    "diffd2 = np.sum(np.abs(cD2))\n",
-    "print(f'left hip第1个平均曲线的CA为: {diffa1},CD为:{diffd1}')\n",
-    "print(f'left hip第2个平均曲线的CA为: {diffa2},CD为:{diffd2}')\n",
+    "# Define the list of data files to be used\n",
+    "use_data=[9,16,19,21,22,28,31,33,35,39,40,42,51,52,56,59,61,62,67,70,71,76,78,83,88,89,90,95,106,109,113,114] # Left 0\n",
     "\n",
-    "i=4\n",
-    "cA1,cD1 = pywt.dwt(mean_data1.iloc[:,i+1],'db1')\n",
-    "cA2,cD2 = pywt.dwt(mean_data2.iloc[:,i+1],'db1')\n",
-    "diffa1 = np.sum(np.abs(cA1))\n",
-    "diffa2 = np.sum(np.abs(cA2))\n",
-    "diffd1 = np.sum(np.abs(cD1))\n",
-    "diffd2 = np.sum(np.abs(cD2))\n",
-    "print(f'left knee第1个平均曲线的CA为: {diffa1},CD为:{diffd1}')\n",
-    "print(f'left knee第2个平均曲线的CA为: {diffa2},CD为:{diffd2}')"
+    "# Initialize an empty list to store the data\n",
+    "data = []\n",
+    "\n",
+    "# Load each data file into a pandas DataFrame and append it to the data list\n",
+    "for i in use_data:\n",
+    "    data.append(pd.read_excel(f'patient_STS/data/{i}_angel_order.xls'))\n",
+    "\n",
+    "# Concatenate all the data and calculate the mean for each level\n",
+    "mean_data1 = pd.concat(data).groupby(level=0).mean()\n",
+    "\n",
+    "# Create a subplot with 2 rows\n",
+    "fig, axs = plt.subplots(2, figsize=(7, 7))\n",
+    "\n",
+    "# Define the titles for each subplot\n",
+    "titles = ['Hip', 'Right hip', 'Right knee', 'Left hip', 'Left knee', 'Spine']\n",
+    "\n",
+    "# Plot the data for each patient and the mean data for the 3rd and 4th columns\n",
+    "for i in range(3,5):\n",
+    "    for j in range(len(use_data)):\n",
+    "        axs[i-3].plot(data[j].iloc[:,i+1], alpha=0.1)\n",
+    "    axs[i-3].plot(mean_data1.iloc[:,i+1], color='red')\n",
+    "    axs[i-3].set_title(titles[i])\n",
+    "    axs[i-3].legend(loc='lower right')\n",
+    "\n",
+    "# Set the y-axis limits and ticks for each subplot\n",
+    "axs[0].set_ylim([50, 190])\n",
+    "axs[0].set_yticks([100,140,180])\n",
+    "axs[1].set_ylim([50, 190])\n",
+    "axs[1].set_yticks([110,150])\n",
+    "\n",
+    "# Set the x and y labels for each subplot\n",
+    "for i in range(2):\n",
+    "    axs[i].set_xlabel('Length(Index)')\n",
+    "    axs[i].set_ylabel('Angle(Unit: Degree)')\n",
+    "\n",
+    "# Adjust the space between the subplots\n",
+    "plt.subplots_adjust(hspace=0.4)\n",
+    "\n",
+    "# Add a title for the entire figure\n",
+    "fig.suptitle('STS Left B0', y=0.04, fontsize=20)\n",
+    "\n",
+    "# Save the figure with a high resolution\n",
+    "plt.savefig('STS L B0.png', dpi=1500)\n",
+    "\n",
+    "# Display the figure\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -160,41 +70,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Repeat the process for a different set of data files\n",
+    "use_data=[3,7,10,12,13,14,15,17,20,23,24,25,29,32,34,37,41,43,45,46,47,49,54,55,66,68,69,72,74,75,77,79,80,81,82,84,86,92,93,97,98,99,100,102,107,108] # Left 1\n",
+    "data = []\n",
+    "for i in use_data:\n",
+    "    data.append(pd.read_excel(f'patient_STS/data/{i}_angel_order.xls'))\n",
+    "mean_data2 = pd.concat(data).groupby(level=0).mean()\n",
+    "fig, axs = plt.subplots(2, figsize=(7, 7))\n",
+    "for i in range(3,5):\n",
+    "    for j in range(len(use_data)):\n",
+    "        axs[i-3].plot(data[j].iloc[:,i+1], alpha=0.1)\n",
+    "    axs[i-3].plot(mean_data2.iloc[:,i+1], color='red')\n",
+    "    axs[i-3].set_title(titles[i])\n",
+    "    axs[i-3].legend(loc='lower right')\n",
+    "axs[0].set_ylim([50, 190])\n",
+    "axs[0].set_yticks([100,140,180])\n",
+    "axs[1].set_ylim([50, 190])\n",
+    "axs[1].set_yticks([110,150])\n",
+    "for i in range(2):\n",
+    "    axs[i].set_xlabel('Length(Index)')\n",
+    "    axs[i].set_ylabel('Angle(Unit: Degree)')\n",
+    "plt.subplots_adjust(hspace=0.4)\n",
+    "fig.suptitle('STS Left B1', y=0.04, fontsize=20)\n",
+    "plt.savefig('STS L B1.png', dpi=1500)\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform wavelet decomposition on the mean data and calculate the sum of absolute values for each component\n",
+    "for i in range(3,5):\n",
+    "    cA1,cD1 = pywt.dwt(mean_data1.iloc[:,i+1],'db1')\n",
+    "    cA2,cD2 = pywt.dwt(mean_data2.iloc[:,i+1],'db1')\n",
+    "    diffa1 = np.sum(np.abs(cA1))\n",
+    "    diffa2 = np.sum(np.abs(cA2))\n",
+    "    diffd1 = np.sum(np.abs(cD1))\n",
+    "    diffd2 = np.sum(np.abs(cD2))\n",
+    "    print(f'The sum of absolute values of CA and CD for the first average curve of {titles[i]} are: {diffa1} and {diffd1}, respectively')\n",
+    "    print(f'The sum of absolute values of CA and CD for the second average curve of {titles[i]} are: {diffa2} and {diffd2}, respectively')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a subplot with 2 rows\n",
     "fig, axs = plt.subplots(2, figsize=(7, 6))\n",
+    "\n",
+    "# Define the titles for each subplot\n",
     "titles = ['Left hip', 'Left knee']\n",
-    "# 定义线条的颜色和粗细\n",
+    "\n",
+    "# Define the colors for the lines\n",
     "colors = ['red','green','purple','orange','gray','brown']\n",
+    "\n",
+    "# Define the columns to be used\n",
     "pans=[3,4]\n",
+    "\n",
+    "# Perform wavelet decomposition on the mean data and plot the approximation coefficients\n",
     "for i in range(2):\n",
     "    cA1, cD1 = pywt.dwt(mean_data1.iloc[:, pans[i] + 1], 'db1')\n",
     "    cA2, cD2 = pywt.dwt(mean_data2.iloc[:, pans[i] + 1], 'db1')\n",
-    "    \n",
-    "    # 画出cA1、cA2和cD2\n",
+    "\n",
+    "    # Plot the approximation coefficients for the first and second average curves\n",
     "    axs[i].plot(cA1, color=colors[0])\n",
     "    axs[i].plot(cA2, color=colors[1])\n",
-    "    \n",
+    "\n",
+    "    # Set the title and legend for each subplot\n",
     "    axs[i].set_title(titles[i])\n",
     "    axs[i].legend(loc='lower right')\n",
     "\n",
+    "# Set the x and y labels for each subplot\n",
     "for i in range(2):\n",
     "    axs[i].set_xlabel('discrete sample points')\n",
     "    axs[i].set_ylabel('wavelet transform coefficients')\n",
     "\n",
+    "# Set the y-axis limits and ticks for each subplot\n",
     "axs[0].set_ylim([125, 242])\n",
     "axs[0].set_yticks([150,175,200,225])\n",
     "axs[1].set_ylim([125, 242])\n",
-    "axs[1].set_yticks([150,175,200,225]) \n",
-    "# 调整子图之间的间距\n",
+    "axs[1].set_yticks([150,175,200,225])\n",
+    "\n",
+    "# Adjust the space between the subplots\n",
     "plt.subplots_adjust(hspace=1)\n",
     "\n",
-    "# 添加总标题\n",
+    "# Add a title for the entire figure\n",
     "fig.suptitle('DWT Coefficients Comparison(STS L B1 AD)', y=0.04, fontsize=20)\n",
     "\n",
-    "# 设置分辨率\n",
+    "# Save the figure with a high resolution\n",
     "plt.savefig('Quantitative Analysis STS L B1 AD.png', dpi=1000)\n",
     "\n",
-    "# 显示图像\n",
-    "plt.show()"
+    "# Display the figure\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -203,40 +177,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Repeat the process for the detail coefficients\n",
     "fig, axs = plt.subplots(2, figsize=(7, 6))\n",
-    "titles = ['Left hip', 'Left knee']\n",
-    "\n",
-    "\n",
-    "pans=[3,4]\n",
     "for i in range(2):\n",
     "    cA1, cD1 = pywt.dwt(mean_data1.iloc[:, pans[i] + 1], 'db1')\n",
     "    cA2, cD2 = pywt.dwt(mean_data2.iloc[:, pans[i] + 1], 'db1')\n",
-    "    \n",
-    "    # 画出cD1，设置线条颜色、粗细和透明度\n",
+    "\n",
+    "    # Plot the detail coefficients for the first and second average curves\n",
     "    axs[i].plot(cD1, color=colors[3])\n",
     "    axs[i].plot(cD2, color=colors[4])\n",
-    "    \n",
+    "\n",
+    "    # Set the title and legend for each subplot\n",
     "    axs[i].set_title(titles[i])\n",
     "    axs[i].legend(loc='lower right')\n",
     "\n",
+    "# Set the x and y labels for each subplot\n",
     "for i in range(2):\n",
     "    axs[i].set_xlabel('discrete sample points')\n",
     "    axs[i].set_ylabel('wavelet transform coefficients')\n",
+    "\n",
+    "# Set the y-axis limits and ticks for each subplot\n",
     "axs[0].set_ylim([-2.5, 2.5])\n",
     "axs[0].set_yticks([-2,-1,0,1,2])\n",
     "axs[1].set_ylim([-2.5, 2.5])\n",
     "axs[1].set_yticks([-2,-1,0,1,2])\n",
-    "# 调整子图之间的间距\n",
+    "\n",
+    "# Adjust the space between the subplots\n",
     "plt.subplots_adjust(hspace=1)\n",
     "\n",
-    "# 添加总标题\n",
+    "# Add a title for the entire figure\n",
     "fig.suptitle('DWT Coefficients Comparison B1 (STS L CD)', y=0.04, fontsize=20)\n",
     "\n",
-    "# 设置分辨率\n",
+    "# Save the figure with a high resolution\n",
     "plt.savefig('Quantitative Analysis STS L B1 CD.png', dpi=1000)\n",
     "\n",
-    "# 显示图像\n",
-    "plt.show()"
+    "# Display the figure\n",
+    "plt.show()\n"
    ]
   }
  ],
